--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "license": "MIT",
   "dependencies": {
     "@cosmjs/stargate": "^0.32.4",
+    "@cosmjs/cosmwasm-stargate": "^0.32.4",
     "@cosmjs/proto-signing": "^0.32.4",
     "@cosmjs/encoding": "^0.32.4",
     "@cosmjs/crypto": "^0.32.4",
