Fix transfer script argument parsing and update env file defaults

--- a/.env.example
+++ b/.env.example
@@ -27,7 +27,8 @@ CONTRACT_LABEL="my-nft-contract"
 # ============================================================================
 
 # Token ID for minting (can also pass as command line argument)
-TOKEN_ID=1
+# Uncomment and set if you want to use env vars instead of command line args
+# TOKEN_ID=1
 
 # Owner address for minted NFT (defaults to your wallet address if not set)
 OWNER_ADDRESS=
@@ -53,8 +54,9 @@ TOKEN_BACKGROUND_COLOR=
 # TRANSFER CONFIGURATION
 # ============================================================================
 
-# Recipient address for transfers
-RECIPIENT=xion1...
+# Recipient address for transfers (can also pass as command line argument)
+# Uncomment and set if you want to use env vars instead of command line args
+# RECIPIENT=xion1...
 
 # Amount for token transfers (in XION, not uxion)
 # Example: 1.5 means 1.5 XION = 1,500,000 uxion
