Fix check-gas script env variable overrides and simulation parameters

--- a/.env.example
+++ b/.env.example
@@ -58,9 +58,10 @@ TOKEN_BACKGROUND_COLOR=
 # Uncomment and set if you want to use env vars instead of command line args
 # RECIPIENT=xion1...
 
-# Amount for token transfers (in XION, not uxion)
-# Example: 1.5 means 1.5 XION = 1,500,000 uxion
-AMOUNT=1.0
+# Amount for token transfers
+# Must be in base units (uxion): 1000000 uxion = 1 XION
+# Uncomment and set if you want to use env vars instead of command line args
+# AMOUNT=1000000
 
 # ============================================================================
 # TRANSACTION MONITORING
@@ -79,8 +80,10 @@ WAIT=false
 # Message to sign (for sign-message.js)
 MESSAGE="Hello, XION blockchain!"
 
-# Transaction type for sign-transaction.js (send-tokens, mint-nft, transfer-nft)
-TX_TYPE=send-tokens
+# Transaction type for sign-transaction.js and check-gas-fee.js
+# (send-tokens, mint-nft, transfer-nft, mint, transfer-nft, instantiate)
+# Uncomment and set if you want to use env vars instead of command line args
+# TX_TYPE=send-tokens
 
 # Output file for signed transaction
 OUTPUT_FILE=signed-tx.json
